--- a/passworder/settings.yaml
+++ b/passworder/settings.yaml
@@ -3,4 +3,4 @@ listen_address: 0.0.0.0
 listen_port: 8000
 reload: true
 openapi_console: true
-logging_directory: "./logs/passworder.log"
+logging_directory: "/tmp/fastapi/"
